Basic information added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF=8">
+	<meta name="description" content="Marco and Mary's Basic Portfolio">
 	<title>Marco and Mary's Portfolio</title>
 </head>
 <body>
-
+	<h1>Mark and Mary</h1>
 </body>
 </html>
