Some style stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
 	<title>Marco and Mary's Portfolio</title>
 </head>
-<body>
-	<h1>Mark and Mary</h1>
+<body style="background-color:#212121;>
+	
+
+	<!-- Main Introduction -->
+	<h1">Mark and Mary</h1>
+	<h2>Visual artisits</h2>
+	<h3>Welcome to our site!</h3>
+	<hr/>
+
+
 </body>
 </html>
