--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	
 
 	<!-- Main Introduction -->
-	<h1>Mark and Mary</h1>
-	<h2>Visual artisits</h2>
-	<h3>Welcome to our site!</h3>
+	<h1 style="color:#d9d9d9;">Mark and Mary</h1>
+	<h2 style="color:#d9d9d9;">Visual artisits</h2>
+	<h3 style="color:#d9d9d9;">Welcome to our site!</h3>
 	<hr/>
 
 
