Color and about me

--- a/index.html
+++ b/index.html
@@ -8,11 +8,34 @@
 <body style="background-color:#212121;">
 	
 
-	<!-- Main Introduction -->
-	<h1 style="color:#d9d9d9;">Mark and Mary</h1>
-	<h2 style="color:#d9d9d9;">Visual artisits</h2>
-	<h3 style="color:#d9d9d9;">Welcome to our site!</h3>
-	<hr/>
+	<header>
+		<!-- Main Introduction -->
+		<h1 style="color:white;">Mark and Mary</h1>
+		<h2 style="color:white;">Visual artisits</h2>
+		<h3 style="color:white;">Welcome to our site!</h3>
+		<hr/>
+		<nav>
+			
+		</nav>
+	</header>
+
+
+	<main>
+		<article>
+			<section>
+				<h4  style="color:white;">
+					About Mark
+				</h4>
+				<p  style="color:white;">
+					Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. 
+				</p>
+			</section>
+		</article>
+	</main>
+
+	<footer>
+		
+	</footer>
 
 
 </body>
