--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 	<header>
 		<!-- Main Introduction -->
-		<h1 style="color:white;">Mark and Mary</h1>
-		<h2 style="color:white;">Visual artisits</h2>
-		<h3 style="color:white;">Welcome to our site!</h3>
+		<h1 style="color:white;"><center>Mark and Mary</center></h1>
+		<h2 style="color:white;"><center>Visual artisits</center></h2>
+		<h3 style="color:white;"><center>Welcome to our site!</center></h3>
 		<hr/>
 		<nav>
 			
@@ -27,7 +27,7 @@
 					About Mark
 				</h4>
 				<p  style="color:white;">
-					Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. 
+					Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. Currently I am learning how to create realistic 3D models.
 				</p>
 			</section>
 		</article>
