Major Site Additions

--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
-	<title>Marco and Mary's Portfolio</title>
+	<title>Marco and Mary's Portfolio Homepage</title>
 </head>
-<body style="background-color:#212121;">
-	
-
-	<header>
+<body>
+	<header class="text">
 		<!-- Main Introduction -->
-		<h1 style="color:white;"><center>Mark and Mary</center></h1>
-		<h2 style="color:white;"><center>Visual artisits</center></h2>
-		<h3 style="color:white;"><center>Welcome to our site!</center></h3>
+		<h1><center>Mark and Mary</center></h1>
+		<h2><center>Visual artisits</center></h2>
+		<h3><center>Welcome to our site!</center></h3>
 		<hr/>
 		<nav>
-			
+			<div id="menu-outer">
+				<div class="table">
+					<ul id="horizontal-list">
+						<li><a class="active" href="index.html">Home</a></li>
+						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
+						<li><a class="inactive" href="cgt116.html">CGT116</a></li>
+					</ul>
+				</div>
+			</div>
 		</nav>
+		<hr/>
 	</header>
-
-
+	
 	<main>
 		<article>
 			<section>
-				<h4  style="color:white;">
+				<h4>
 					About Mark
 				</h4>
 				<p  style="color:white;">
 					Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. Currently I am learning how to create realistic 3D models.
 				</p>
+				<p>
+					To the right is an animation I made for the fun of it.
+				</p>
 			</section>
+			<section>
+				<di class="right-video">
+					<p style="text-align:right;"><iframe width="560" height="315" src="https://www.youtube.com/embed/j_ZsjtnJaiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+				</di>
+			</section>
+
 		</article>
-		<p style="color:white;">Temporary Embed of assignment 1</p>
-		<div class="sketchfab-embed-wrapper">
-			<iframe title="A 3D model" width="1280" height="720" src="https://sketchfab.com/models/98871ff919954c788ab5a6035c911da8/embed?autostart=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-			<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-				<a href="https://sketchfab.com/3d-models/signature-98871ff919954c788ab5a6035c911da8?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Signature</a>
-				by <a href="https://sketchfab.com/mcmurmar001?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">mcmurmar001</a>
-				on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-			</p>
-		</div>
 		
 	</main>
-
-	<footer>
-		
-	</footer>
-
 
 </body>
 </html>
