--- a/portfolio.html
+++ b/portfolio.html
@@ -31,19 +31,19 @@
 
         <body>
             <article>
-                <p>
-                    My first 3D model in Blender.
-                </p>
+                <div>
+                    <ul>
+                        <li>
+                            <h2 style="text-align: center;">CGT116 week 1 model</h2>
+                            <p style="text-align: center;">
+                                <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">        
+                            </p>
+                        </li>
+                    </ul>
+                </div>
             </article>
             <article>
-                <div class="sketchfab-embed-wrapper">
-                    <iframe title="A 3D model" width="1280" height="720" src="https://sketchfab.com/models/98871ff919954c788ab5a6035c911da8/embed?autostart=1&amp;ui_controls=1&amp;ui_infos=1&amp;ui_inspector=1&amp;ui_stop=1&amp;ui_watermark=1&amp;ui_watermark_link=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-                    <p style="text-align:right; font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
-                        <a href="https://sketchfab.com/3d-models/signature-98871ff919954c788ab5a6035c911da8?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Signature</a>
-                        by <a href="https://sketchfab.com/mcmurmar001?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Mark McMurray</a>
-                        on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
-                    </p>
-                </div>
+               
             </article>
 
         </body>
