--- a/cgt116.html
+++ b/cgt116.html
@@ -28,7 +28,7 @@
     </header>
 
     <main>
-        <h2>
+        <h2 style="text-align: center;">
             Week 1 assignment
         </h2>
         <div class="sketchfab-embed-wrapper">
