Fomratting and additions

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,9 @@
                         <li>
                             <h2 style="text-align: center;">CGT116 week 1 model</h2>
                             <p style="text-align: center;">
-                                <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">        
+                                <a href="cgt116.html">
+                                    <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">
+                                </a>
                             </p>
                         </li>
                     </ul>
