Fix iframe scrolling on smaller screens

--- a/cgt116.html
+++ b/cgt116.html
@@ -42,8 +42,7 @@
                     style="overflow: hidden; height: 100%; width: 100%; position: absolute;"
                     title="week"
                     src="cgt-hand-in/week1.html"
-                    frameborder="0"
-                    scrolling="no"></iframe>
+                    frameborder="0"></iframe>
         </div>
     </body>
 
