Style changes and contact page added

--- a/cgt116.html
+++ b/cgt116.html
@@ -20,6 +20,7 @@
 						<li><a class="inactive" href="index.html">Home</a></li>
                         <li><a class="inactive" href="portfolio.html">Portfolio</a></li>
                         <li><a class="active" href="cgt116.html">CGT116</a></li>
+                        <li><a class="inactive" href="contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
             </div>
