--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
+	<meta name="viewport" content="width-device-width, initial-scale=1">
 	<title>Marco and Mary's Portfolio Homepage</title>
 </head>
 <body>
@@ -20,6 +21,7 @@
 						<li><a class="active" href="index.html">Home</a></li>
 						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
 						<li><a class="inactive" href="cgt116.html">CGT116</a></li>
+						<li><a class="inactive" href="contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
 			</div>
@@ -30,20 +32,39 @@
 	<main>
 		<article>
 			<section>
-				<h4>
-					About Mark
-				</h4>
-				<p  style="color:white;">
-					Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. Currently I am learning how to create realistic 3D models.
-				</p>
-				<p>
-					To the right is an animation I made for the fun of it.
-				</p>
+				<div  style="background-color: #212121;">
+					<h4>
+						About Mark
+					</h4>
+					<p  style="color:white;">
+						Hello! I am a 3D artist currently enrolled in Purdue Polytechnic. Currently I am learning how to create realistic 3D models.
+					</p>
+					<p>
+						To the right is an animation I made for the fun of it.
+					</p>
+				</div>
 			</section>
 			<section>
 				<di class="right-video">
 					<p style="text-align:right;"><iframe width="560" height="315" src="https://www.youtube.com/embed/j_ZsjtnJaiM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 				</di>
+			</section>
+				
+
+			<section>
+				<article>
+					<div  style="background-color: #212121;">
+						<h4>
+							About Mary
+						</h4>
+						<p>
+							Hi everyone! I am a visual designer who makes logos, art, and 3D renders with Mark's stuff!
+						</p>
+						<p>
+							The background of this site was made by me!
+						</p>
+					</div>
+				</article>
 			</section>
 
 		</article>
