Extra additions to contact page

--- a/contact-us.html
+++ b/contact-us.html
@@ -62,7 +62,12 @@
 						<center>Access our YouTube page!</center>
 					</h2>
 					<center><p><img src="images/social-media/yt.png" alt="YouTube" width="64ps" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p></center>
-				</div>
+					<h2>
+						<center>Join our Discord and chat!</center>
+					</h2>
+					<p style="text-align: center;"><iframe src="https://discordapp.com/widget?id=726461107191021629&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
+					<p style="text-align: center;"><a href="https://discord.gg/Z9e5ADs" target="_blank">Connect to Discord</a></p>
+					</div>
 			</article>
 		</section>
 	</main>
