Forgot what i changed

--- a/cgt-hand-in/week1.html
+++ b/cgt-hand-in/week1.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <main>
-        <h2 style="text-align: center;">
+        <h2 style="text-align: center; color: white;">
             Week 1 assignment
         </h2>
         <div class="sketchfab-embed-wrapper">
