--- a/contact-us.html
+++ b/contact-us.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
-	<title>Marco and Mary's Portfolio Homepage</title>
+	<title>Marco and Mary's Portfolio Contact Page</title>
 </head>
 <body>
 	<header class="text">
