--- a/cgt116.html
+++ b/cgt116.html
@@ -30,7 +30,8 @@
                         width="100%"
                         height="84"
                         src="CGT-nav.html"
-                        frameborder="0"></iframe>
+                        frameborder="0"
+                        scrolling=no></iframe>
                 </p>
 		</nav>
 		<hr/>
