--- a/CGT-nav.html
+++ b/CGT-nav.html
@@ -5,8 +5,9 @@
 <body>
     <nav>
         <ul>
-            <li>
+            <li type="none">
                 <a href="cgt-hand-in/week1.html" target="week-display">Week 1</a>
+                <a href="cgt-hand-in/week2.html" target="week-display">Week 2</a>
             </li>
         </ul>
     </nav>
