--- a/cgt116.html
+++ b/cgt116.html
@@ -10,7 +10,7 @@
 	<header class="text">
 		<!-- Main Introduction -->
 		<h1><center>Mark and Mary</center></h1>
-		<h2><center>Visual artisits</center></h2>
+		<h2><center>Visual artisists</center></h2>
 		<h3><center>Welcome to our site!</center></h3>
 		<hr/>
 		<nav>
