--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
         <header class="text">
             <!-- Main Introduction -->
             <h1><center>Mark and Mary</center></h1>
-            <h2><center>Visual artisists</center></h2>
+            <h2><center>Visual artists</center></h2>
             <h3><center>Welcome to our site!</center></h3>
             <hr/>
             <nav>
