Adding a portfolio object and changing the layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,21 +32,21 @@
 
         <body>
             <article>
-                <div>
-                    <ul>
-                        <li>
+                <table style="width: 100%;">
+                    <tr>
+                        <td>
                             <h2 style="text-align: center;">CGT116 week 1 model</h2>
-                            <p style="text-align: center;">
-                                <a href="cgt116.html">
+                                <p style="text-align: center;">
                                     <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">
-                                </a>
+                        </td>
+                        <td>
+                            <h2 style="text-align: center;">A drawing for fun</h2>
+                            <p style="text-align: center;">
+                                <img src="images/drawings/mary-drawing.png" alt="A gift for a friend" width="625" height="705">
                             </p>
-                        </li>
-                    </ul>
-                </div>
-            </article>
-            <article>
-               
+                        </td>
+                    </tr>
+                </table>
             </article>
 
         </body>
