--- a/tech120.html
+++ b/tech120.html
@@ -4,9 +4,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
-    <title>Marco and Mary's Portfolio Class Site</title>
+	<meta name="viewport" content="width-device-width, initial-scale=1">
+	<title>Marco and Mary's Portfolio Homepage</title>
 </head>
-<body>
 	<header class="text">
 		<!-- Main Introduction -->
 		<h1><center>Mark and Mary</center></h1>
@@ -18,40 +18,40 @@
 				<div class="table">
 					<ul id="horizontal-list">
 						<li><a class="inactive" href="index.html">Home</a></li>
-                        <li><a class="inactive" href="portfolio.html">Portfolio</a></li>
-                        <li><a class="active" href="cgt116.html">CGT116</a></li>
-                        <li><a class="inactive" href="tech120.html">TECH120</a></li>
-                        <li><a class="inactive" href="contact-us.html">Contact us!</a></li>
+						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
+                        <li><a class="inactive" href="cgt116.html">CGT116</a></li>
+                        <li><a class="active" href="tech120.html">TECH120</a></li>
+						<li><a class="inactive" href="contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
+			</div>
+		</nav>
+        <hr/>
+        <nav>
             </div>
                 <p style="text-align: center;">
                     <iframe id="cgt-nav-bar"
                         title="CGT Navagation Bar"
                         width="100%"
                         height="84"
-                        src="CGT-nav.html"
+                        src="technav.html"
                         frameborder="0"
                         scrolling=no></iframe>
                 </p>
 		</nav>
 		<hr/>
     </header>
-
+    
     <body>
         <div class="week-nav">
                 <iframe id="iFramesToSize"
                     name="week-display"
                     style="overflow: hidden; height: 100%; width: 100%; position: absolute;"
                     title="week"
-                    src="cgt-hand-in/week1.html"
+                    src="tech-hand-in/week1.html"
                     frameborder="0"></iframe>
         </div>
     </body>
 
-    <footer>
-
-    </footer>
     
-</body>
 </html>
