--- a/contact-us.html
+++ b/contact-us.html
@@ -20,6 +20,7 @@
 						<li><a class="inactive" href="index.html">Home</a></li>
 						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
 						<li><a class="inactive" href="cgt116.html">CGT116</a></li>
+						<li><a class="inactive" href="tech120.html">TECH120</a></li>
 						<li><a class="active" href="contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
