--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,7 @@
                             <li><a class="inactive" href="index.html">Home</a></li>
                             <li><a class="active" href="portfolio.html">Portfolio</a></li>
                             <li><a class="inactive" href="cgt116.html">CGT116</a></li>
+                            <li><a class="inactive" href="tech120.html">TECH120</a></li>
                             <li><a class="inactive" href="contact-us.html">Contact us!</a></li>
                         </ul>
                     </div>
