--- a/technav.html
+++ b/technav.html
@@ -7,8 +7,8 @@
     <nav>
         <ul>
             <li type="none">
-                <a href="cgt-hand-in/week1.html" target="week-display">Week 1</a>
-                <a href="cgt-hand-in/week2.html" target="week-display">Week 2</a>
+                <a href="tech-hand-in/week1.html" target="week-display">Week 1</a>
+                <a href="tech-hand-in/week2.html" target="week-display">Week 2</a>
             </li>
         </ul>
     </nav>
