--- a/tech-hand-in/week2.html
+++ b/tech-hand-in/week2.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width-device-width, initial-scale=1">
 </head>
 <html>
-    <body>
+    <body style="background-color: #212121;">
         <h1 style="text-align: center;color:white">Week 2</h1>
         <h2 style="text-align: center;color:white">
             Shopping Cart Prototype
