--- a/tech-hand-in/week1.html
+++ b/tech-hand-in/week1.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width-device-width, initial-scale=1">
 </head>
 <html>
-    <body style="background-color: #212121;">
+    <body>
         <h1 style="text-align: center;color:white">Week 1</h1>
         <h2 style="text-align: center; color:white">
             Nothing to display here.
