--- a/Classes/tech120/nav/technav.html
+++ b/Classes/tech120/nav/technav.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="nav-bar.css">
+    <link rel="stylesheet" type="text/css" href="nav.css">
 </head>
 <html>
 <body>
     <nav>
-        <ul>
-            <li type="none">
+        <ul type="none">
+            <li>
                 <a href="tech-hand-in/week1.html" target="week-display">Week 1</a>
                 <a href="tech-hand-in/week2.html" target="week-display">Week 2</a>
             </li>
