--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
                         <ul id="horizontal-list">
                             <li><a class="inactive" href="index.html">Home</a></li>
                             <li><a class="active" href="portfolio.html">Portfolio</a></li>
-                            <li><a class="inactive" href="cgt116.html">CGT116</a></li>
-                            <li><a class="inactive" href="tech120.html">TECH120</a></li>
+                            <li><a class="inactive" href="Classes/cgt/cgt116.html">CGT116</a></li>
+                            <li><a class="inactive" href="Classes/tech120/tech120.html">TECH120</a></li>
                             <li><a class="inactive" href="contact-us.html">Contact us!</a></li>
                         </ul>
                     </div>
