--- a/Classes/tech120/tech120.html
+++ b/Classes/tech120/tech120.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="topnav.css">
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
 	<meta name="viewport" content="width-device-width, initial-scale=1">
@@ -19,9 +19,9 @@
 					<ul id="horizontal-list">
 						<li><a class="inactive" href="index.html">Home</a></li>
 						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
-                        <li><a class="inactive" href="cgt116.html">CGT116</a></li>
-                        <li><a class="active" href="tech120.html">TECH120</a></li>
-						<li><a class="inactive" href="contact-us.html">Contact us!</a></li>
+						<li><a class="inactive" href="https://marcogames1973.github.io/Classes/cgt/cgt116.html">CGT116</a></li>
+						<li><a class="active" href="https://marcogames1973.github.io/Classes/tech120/tech120.html">TECH120</a></li>
+						<li><a class="inactive" href="https://marcogames1973.github.io/contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
 			</div>
@@ -34,7 +34,7 @@
                         title="CGT Navagation Bar"
                         width="100%"
                         height="84"
-                        src="technav.html"
+                        src="nav/technav.html"
                         frameborder="0"
                         scrolling=no></iframe>
                 </p>
