--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 					<ul id="horizontal-list">
 						<li><a class="active" href="index.html">Home</a></li>
 						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
-						<li><a class="inactive" href="cgt116.html">CGT116</a></li>
-						<li><a class="inactive" href="tech120.html">TECH120</a></li>
+						<li><a class="inactive" href="Classes/cgt/cgt116.html">CGT116</a></li>
+						<li><a class="inactive" href="Classes/tech120/tech120.html">TECH120</a></li>
 						<li><a class="inactive" href="contact-us.html">Contact us!</a></li>
 					</ul>
 				</div>
