--- a/Classes/tech120/tech120.html
+++ b/Classes/tech120/tech120.html
@@ -17,8 +17,8 @@
 			<div id="menu-outer">
 				<div class="table">
 					<ul id="horizontal-list">
-						<li><a class="inactive" href="index.html">Home</a></li>
-						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
+						<li><a class="inactive" href="https://marcogames1973.github.io/index.html">Home</a></li>
+						<li><a class="inactive" href="https://marcogames1973.github.io/portfolio.html">Portfolio</a></li>
 						<li><a class="inactive" href="https://marcogames1973.github.io/Classes/cgt/cgt116.html">CGT116</a></li>
 						<li><a class="active" href="https://marcogames1973.github.io/Classes/tech120/tech120.html">TECH120</a></li>
 						<li><a class="inactive" href="https://marcogames1973.github.io/contact-us.html">Contact us!</a></li>
