Fix the CGT nav

--- a/Classes/cgt/nav/CGT-nav.html
+++ b/Classes/cgt/nav/CGT-nav.html
@@ -7,8 +7,8 @@
     <nav>
         <ul type="none">
             <li>
-                <a href="cgt-hand-in/week1.html" target="week-display">Week 1</a>
-                <a href="cgt-hand-in/week2.html" target="week-display">Week 2</a>
+                <a href="https://marcogames1973.github.io/Classes/cgt/cgt-hand-in/cgt-hand-in/week1.html" target="week-display">Week 1</a>
+                <a href="https://marcogames1973.github.io/Classes/cgt/cgt-hand-in/cgt-hand-in/week2.html" target="week-display">Week 2</a>
             </li>
         </ul>
     </nav>
