--- a/Classes/tech120/nav/technav.html
+++ b/Classes/tech120/nav/technav.html
@@ -7,8 +7,8 @@
     <nav>
         <ul type="none">
             <li>
-                <a href="tech-hand-in/week1.html" target="week-display">Week 1</a>
-                <a href="tech-hand-in/week2.html" target="week-display">Week 2</a>
+                <a href="https://marcogames1973.github.io/Classes/tech120/tech-hand-in/week1.html" target="week-display">Week 1</a>
+                <a href="https://marcogames1973.github.io/Classes/tech120/tech-hand-in/week2.html" target="week-display">Week 2</a>
             </li>
         </ul>
     </nav>
