Header additions for the table

--- a/portfolio.html
+++ b/portfolio.html
@@ -35,6 +35,10 @@
             <article>
                 <table style="width: 100%;">
                     <tr>
+                        <th>Mark</th>
+                        <th>Mary</th>
+                    </tr>
+                    <tr>
                         <td>
                             <h2 style="text-align: center;">CGT116 week 1 model</h2>
                                 <p style="text-align: center;">
