--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,17 @@
                     </tr>
                     <tr>
                         <td>
+                            <h2 style="text-align: center;">CGT week 2 assignment</h2>
+                                <div style="text-align: center;">
+                                <img src="images/renders/building-block-out.png" alt="Buidlings Render" width="640" height="480"></div>
+                        </td>
+                        <td>
+                            <h2 style="text-align: center;">SOLO Meme Animation</h2>
+                            <div style="text-align: center;"><iframe width="560" height="315" src="https://www.youtube.com/embed/q8KLAUoPTBg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <h2 style="text-align: center;">CGT116 week 1 model</h2>
                                 <p style="text-align: center;">
                                     <img src="images/renders/signature-render.png" alt="A signature for Mark" width="640" height="480">
