Added Facebook social media link

--- a/contact-us.html
+++ b/contact-us.html
@@ -5,6 +5,12 @@
 	<meta charset="UTF=8">
 	<meta name="description" content="Marco and Mary's Basic Portfolio">
 	<title>Marco and Mary's Portfolio Contact Page</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<style>
+		.null {
+			all:unset;
+		}
+	</style>
 </head>
 <body>
 	<header class="text">
@@ -50,7 +56,10 @@
 				<div>
 					<ul type="square">
 						<li>
-							<p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>Maryplays57#6285</p>
+							<p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Maryplays57#6285</p>
+						</li>
+						<li>
+							<p><a href="https://www.facebook.com/Maryplays57/" style="all: unset;"><img src="images/social-media/facebook.png" alt="Facebook" height="64px" width="64px" align=center>Mary McMurray</a></p>
 						</li>
 					</ul>
 				</div>
