--- a/contact-us.html
+++ b/contact-us.html
@@ -61,6 +61,9 @@
 						<li>
 							<p><a href="https://www.facebook.com/Maryplays57/" style="all: unset;"><img src="images/social-media/facebook.png" alt="Facebook" height="64px" width="64px" align=center>Mary McMurray</a></p>
 						</li>
+						<li>
+							<p><a href="https://twitter.com/maryplays57" style="all: unset;"><img src="images/social-media/twitter.png" alt="Twitter" height="64px" width="64px" align=center>Maryplays57</a></p>
+						</li>
 					</ul>
 				</div>
 			</article>
