--- a/Classes/cgt/nav/CGT-nav.html
+++ b/Classes/cgt/nav/CGT-nav.html
@@ -9,6 +9,7 @@
             <li>
                 <a href="https://marcogames1973.github.io/Classes/cgt/cgt-hand-in/week1.html" target="week-display">Week 1</a>
                 <a href="https://marcogames1973.github.io/Classes/cgt/cgt-hand-in/week2.html" target="week-display">Week 2</a>
+                <a href="https://marcogames1973.github.io/Classes/cgt/cgt-hand-in/week3.html" target="week-display">Week 3</a>
             </li>
         </ul>
     </nav>
