Changed some things

--- a/Classes/cgt/cgt-hand-in/week3.html
+++ b/Classes/cgt/cgt-hand-in/week3.html
@@ -12,8 +12,22 @@
                 by <a href="https://sketchfab.com/mcmurmar001?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Marcogames1973</a>
                 on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campaign=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
             </p>
-        </div>        
-        
+        </div>
+            <ul type=none>
+                <li>
+                    <a href="more-images/ref-doric_orig.jpg" target="hey"><img src="more-images/ref-doric_orig.jpg" alt="Reference Image" width="64px" height="64px"></a>
+                </li>
+                <li>
+                    <a href="more-images/Types-of-Ancient-Roman-architecture.webp" target="hey"><img src="more-images/Types-of-Ancient-Roman-architecture.webp" alt="Reference Image 2" width="64px" height="64px"></a>
+                </li>
+            </ul>
+            <div id="yee">
+                <iframe name="hey"
+                style="overflow: hidden; height: 100%; width: 100%; position: absolute;"
+                frameborder="0">
+
+                </iframe>
+            </div>
     </main>
 </body>
 </html>
