--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,13 @@
                     </tr>
                     <tr>
                         <td>
+                            <h2 style="text-align: center;">Minecraft Render</h2>
+                            <div style="text-align: center;">
+                            <img src="images/renders/Ronder.png" alt="A render using visual effects and lighting." width="640"height="480"></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <h2 style="text-align: center;">CGT week 2 assignment</h2>
                                 <div style="text-align: center;">
                                 <img src="images/renders/building-block-out.png" alt="Buidlings Render" width="640" height="480"></div>
