Minecraft info added

--- a/contact-us.html
+++ b/contact-us.html
@@ -69,12 +69,22 @@
 					<h2>
 						<center>Access our YouTube page!</center>
 					</h2>
-					<center><p><img src="images/social-media/yt.png" alt="YouTube" width="64ps" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p></center>
+					<center><p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p></center>
 					<h2>
 						<center>Join our Discord and chat!</center>
 					</h2>
 					<p style="text-align: center;"><iframe src="https://discordapp.com/widget?id=726461107191021629&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
-					</div>
+				</div>
+			</article>
+		</section>
+		<section>
+			<article style="background-color: #212121;">
+				<div>
+					<h2>
+						<center>Join Mary in Minecraft!</center>
+					</h2>
+					<center><p><img src="images/social-media/minecraft.png" alt="Minecraft" width="64px" height="64px" align=center>Join the Discord to find out more!</p></center>
+				</div>
 			</article>
 		</section>
 	</main>
