New nav bar shit

--- a/Classes/tech120/tech120.html
+++ b/Classes/tech120/tech120.html
@@ -1,57 +1,28 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="topnav.css">
-	<meta charset="UTF=8">
-	<meta name="description" content="Marco and Mary's Basic Portfolio">
-	<meta name="viewport" content="width-device-width, initial-scale=1">
-	<title>Marco and Mary's Portfolio Homepage</title>
-</head>
-	<header class="text">
-		<!-- Main Introduction -->
-		<h1><center>Mark and Mary</center></h1>
-		<h2><center>Visual artists</center></h2>
-		<h3><center>Welcome to our site!</center></h3>
-		<hr/>
-		<nav>
-			<div id="menu-outer">
-				<div class="table">
-					<ul id="horizontal-list">
-						<li><a class="inactive" href="https://marcogames1973.github.io/index.html">Home</a></li>
-						<li><a class="inactive" href="https://marcogames1973.github.io/portfolio.html">Portfolio</a></li>
-						<li><a class="inactive" href="https://marcogames1973.github.io/Classes/cgt/cgt116.html">CGT116</a></li>
-						<li><a class="active" href="https://marcogames1973.github.io/Classes/tech120/tech120.html">TECH120</a></li>
-						<li><a class="inactive" href="https://marcogames1973.github.io/contact-us.html">Contact us!</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-        <hr/>
-        <nav>
-            </div>
-                <p style="text-align: center;">
-                    <iframe id="cgt-nav-bar"
-                        title="CGT Navagation Bar"
-                        width="100%"
-                        height="84"
-                        src="nav/technav.html"
-                        frameborder="0"
-                        scrolling=no></iframe>
-                </p>
-		</nav>
-		<hr/>
-    </header>
-    
-    <body>
-        <div class="week-nav">
-                <iframe id="iFramesToSize"
-                    name="week-display"
-                    style="overflow: hidden; height: 100%; width: 100%; position: absolute;"
-                    title="week"
-                    src="tech-hand-in/week1.html"
-                    frameborder="0"></iframe>
-        </div>
-    </body>
 
-    
+<head>
+    <link rel="stylesheet" type="text/css" href="topnav.css">
+    <meta charset="UTF=8">
+    <meta name="description" content="Marco and Mary's Basic Portfolio">
+    <meta name="viewport" content="width-device-width, initial-scale=1">
+    <title>Marco and Mary's Portfolio Homepage</title>
+</head>
+<header class="text">
+    <nav>
+        </div>
+        <p style="text-align: center;">
+            <iframe id="cgt-nav-bar" title="CGT Navagation Bar" width="100%" height="84" src="nav/technav.html" frameborder="0" scrolling=no></iframe>
+        </p>
+    </nav>
+    <hr/>
+</header>
+
+<body>
+    <div class="week-nav">
+        <iframe id="iFramesToSize" name="week-display" style="overflow: hidden; height: 100%; width: 100%; position: absolute;" title="week" src="tech-hand-in/week1.html" frameborder="0"></iframe>
+    </div>
+</body>
+
+
 </html>
