--- a/contact-us.html
+++ b/contact-us.html
@@ -1,98 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<meta charset="UTF=8">
-	<meta name="description" content="Marco and Mary's Basic Portfolio">
-	<title>Marco and Mary's Portfolio Contact Page</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</head>
-<body>
-	<header class="text">
-		<!-- Main Introduction -->
-		<h1><center>Mark and Mary</center></h1>
-		<h2><center>Visual artists</center></h2>
-		<h3><center>Welcome to our site!</center></h3>
-		<hr/>
-		<nav>
-			<div id="menu-outer">
-				<div class="table">
-					<ul id="horizontal-list">
-						<li><a class="inactive" href="index.html">Home</a></li>
-						<li><a class="inactive" href="portfolio.html">Portfolio</a></li>
-						<li><a class="inactive" href="Classes/cgt/cgt116.html">CGT116</a></li>
-						<li><a class="inactive" href="Classes/tech120/tech120.html">TECH120</a></li>
-						<li><a class="active" href="contact-us.html">Contact us!</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<hr/>
-	</header>
-	
-	<main>
-		<section>
-			<article style="background-color: #212121;">
-				<h2>
-					<center>Mark!</center>
-				</h2>
-				<div>
-					<ul type="square">
-						<li>
-							<p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Marcogames1973#7391</p>
-						</li>
-					</ul>
-				</div>
-			</article>
-			<article style="background-color: #212121;">
-				<h2>
-					<center>Mary!</center>
-				</h2>
-				<div>
-					<ul type="square">
-						<li>
-							<p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Maryplays57#6285</p>
-						</li>
-						<li>
-							<p><a href="https://www.facebook.com/Maryplays57/" style="all: unset;"><img src="images/social-media/facebook.png" alt="Facebook" height="64px" width="64px" align=center>Mary McMurray</a></p>
-						</li>
-						<li>
-							<p><a href="https://twitter.com/maryplays57" style="all: unset;"><img src="images/social-media/twitter.png" alt="Twitter" height="64px" width="64px" align=center>Maryplays57</a></p>
-						</li>
-					</ul>
-				</div>
-			</article>
-		</section>
-		<section>
-			<article style="background-color: #212121;">
-				<div>
-					<h2>
-						<center>Access our YouTube page!</center>
-					</h2>
-					<center><p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p></center>
-					<h2>
-						<center>Join our Discord and chat!</center>
-					</h2>
-					<p style="text-align: center;"><iframe src="https://discordapp.com/widget?id=726461107191021629&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
-				</div>
-			</article>
-		</section>
-		<section>
-			<article style="background-color: #212121;">
-				<div>
-					<h2>
-						<center>Join Mary in Minecraft!</center>
-					</h2>
-					<center><p><img src="images/social-media/minecraft.png" alt="Minecraft" width="64px" height="64px" align=center>Join the Discord to find out more!</p></center>
-				</div>
-			</article>
-		</section>
-	</main>
 
-	<footer>
-		<p>
-		<center>Youtube icons PNG Designed By DigitAm from <a href="https://pngtree.com/">Pngtree.com</a></center>
-		</p>
-	</footer>
+<head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <meta charset="UTF=8">
+</head>
+
+<body>
+
+    <main>
+        <section>
+            <article style="background-color: #212121;">
+                <h2>
+                    <center>Mark!</center>
+                </h2>
+                <div>
+                    <ul type="square">
+                        <li>
+                            <p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Marcogames1973#7391</p>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+            <article style="background-color: #212121;">
+                <h2>
+                    <center>Mary!</center>
+                </h2>
+                <div>
+                    <ul type="square">
+                        <li>
+                            <p><img src="images/social-media/Discord.png" alt="Discord" height="64px" width="64px" align=center>@Maryplays57#6285</p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="https://www.facebook.com/Maryplays57/" style="all: unset;"><img src="images/social-media/facebook.png" alt="Facebook" height="64px" width="64px" align=center>Mary McMurray</a>
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <a href="https://twitter.com/maryplays57" style="all: unset;"><img src="images/social-media/twitter.png" alt="Twitter" height="64px" width="64px" align=center>Maryplays57</a>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+        </section>
+        <section>
+            <article style="background-color: #212121;">
+                <div>
+                    <h2>
+                        <center>Access our YouTube page!</center>
+                    </h2>
+                    <center>
+                        <p><img src="images/social-media/yt.png" alt="YouTube" width="64px" height="64px" align=center><a href="https://www.youtube.com/channel/UCQsJbWXF1OJLS2kQ6PAxvzg" target="_blank">Marco and Mary's Productions</a></p>
+                    </center>
+                    <h2>
+                        <center>Join our Discord and chat!</center>
+                    </h2>
+                    <p style="text-align: center;"><iframe src="https://discordapp.com/widget?id=726461107191021629&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></p>
+                </div>
+            </article>
+        </section>
+        <section>
+            <article style="background-color: #212121;">
+                <div>
+                    <h2>
+                        <center>Join Mary in Minecraft!</center>
+                    </h2>
+                    <center>
+                        <p><img src="images/social-media/minecraft.png" alt="Minecraft" width="64px" height="64px" align=center>Join the Discord to find out more!</p>
+                    </center>
+                </div>
+            </article>
+        </section>
+    </main>
+
+    <footer>
+        <p>
+            <center>Youtube icons PNG Designed By DigitAm from <a href="https://pngtree.com/">Pngtree.com</a></center>
+        </p>
+    </footer>
 </body>
+
 </html>
